--- a/index.html
+++ b/index.html
@@ -50,19 +50,17 @@
 
 				<section class="win7-EOL-there-is-no-plan">
 						<span class="fragment fade-in">
-							<p>Windows 7 End Of Support: January 14th 2020</p>
-							<p>New hardware will not work with older Windows versions</p>
-							<p>Old hardware may not perform well with Win 10</p>
-							<p>Clinical apps may not work with Win10 or Edge</p>
+							<h3>Windows 7 End Of Support: January 14th <strong>2020</strong></h3>
+							<p> = You have to migrate to Windows 10 before 2020</p>
 						</span>
 						<span class="fragment fade-in">
-							<p>1) You have to migrate to Win10 before 2020</p>
-							<p>2) You have to replace all legacy clinical apps before 2020, to do 1)</p>
-							<p>3) You need to upgrade all your hardware in order to do 2)</p>
-							<p><strong>You can’t afford to do 1), 2), and 3) at the same time (cash/staff/training)</strong></p>
+							<p>Old hardware won't work with Win 10</p>
+							<p>Many clinical apps don't work with Win10 or Edge</p>
+							<p><strong>You have to replace all legacy clinical apps before 2020</strong></p>
+							<p><strong>You need to upgrade all your hardware before 2020</strong></p>
 						</span>
 						<span class="fragment fade-in">
-							<h2>There Is No Plan</h2>
+							<h2>There Is No Credible Plan</h2>
 						</span>
 				</section>
 
@@ -83,43 +81,29 @@
 					<p class="fragment fade-in">legacy clinical apps with pre-Win10 dependencies</p>
 					<p class="fragment fade-in">no resources to migrate off those legacy clinical apps</p>
 					<p class="fragment fade-in">increasing security risk from these older dependencies</p>
+
+					<h2 class="fragment fade-in">YOU HAVE A PROBLEM</h2>
 				</section>
 
 				<section>
-					<h2>it leaks patient data?</h2>
-					<p class="fragment fade-in">Windows 10 sends data to Microsoft in over 30 ways (incl raw keystrokes)</p>
+					<h2>Windows 10 leaks patient data</h2>
+					<p class="fragment fade-in">Windows 10 sends data to Microsoft in over 30 ways</p>
+					<p class="fragment fade-in">(incl <strong>raw keystrokes</strong>)</p>
 					<p class="fragment fade-in">This can be over-ridden in your org - but it is extra work, and not easy</p>
-					<p class="fragment fade-in">Third party / home PCs accessing NHSMail, VPNing into trust systems are beyond organisational controls, and may leak data, so as we develop wider data sharing, it will be impossible to prevent keystrokes being sent to Redmond, WA, USA.</p>
 					<br>
-					<p class="fragment fade-in">We may not be able to stop privacy-critical PID keystroke data being sent to Microsoft via Windows 10 PCs</p>
+					<p class="fragment fade-in">= We may not be able to stop privacy-critical PID keystroke data being sent to Microsoft via Windows 10 PCs</p>
 					<h3 class="fragment fade-in">We need to think hard about whether Windows 10 is fit for the NHS.</p>
 				</section>
 
 				<section>
-					<h1>There Is No Plan</h1>
+					<h1>What is YOUR Plan for 2020?</h1>
 				</section>
-				
+
 				<section>
-					<h2>What is NHSbuntu?</h2>
-					<br/>
-					<p>NHSbuntu takes <strong>plain Ubuntu</strong> and optimises it for the NHS</p>
-					<p><strong>unofficial:</strong> not directly affiliated to NHS or Canonical organisations</p>
-					<p><strong>removes</strong> packages the NHS doesn’t need</p>
-					<p><strong>adds</strong> packages the NHS needs, <strong>develops</strong> custom elements</p>
-					<p><strong>adds familiarity</strong> by configuring look &amp; feel, branding etc</p>
-					<p><strong>provides services</strong> around NHSbuntu - customisations, Disaster-recovery Live USB version, custom development.</p>
+					<img src="img/nhsbuntu_logo_white.svg.png" alt="NHSbuntu">
+					<h4>An operating system for the NHS</h4>
 				</section>
-					
-				<section>
-					<h2>What is Ubuntu?</h2>
-					<br/>
-					<p>Ubuntu is ‘Linux for Human Beings’</p>
-					<p>A more friendly wrapper around Linux</p>
-					<p>Backed by Canonical, who provide support services</p>
-					<p>The most popular Linux variant, with millions of deployments worldwide</p>
-					<p>We have taken Ubuntu and pre-configured it to work with the NHS’s most common needs and requirements.</p>
-				</section>
-	
+
 				<section>
 					<h2>What is Linux?</h2>
 					<br/>
@@ -132,44 +116,38 @@
 				</section>
 
 				<section>
-					<h2>~80% of NHS desktops are for backoffice/admin</h2>
+					<h2>What is Ubuntu?</h2>
 					<br/>
-					<p class="fragment fade-in">(discuss)</p>
+					<p>Ubuntu is ‘Linux for Human Beings’</p>
+					<p>A more friendly wrapper around Linux</p>
+					<p>Backed by Canonical, who provide support services</p>
+					<p>The most popular Linux variant, with millions of deployments worldwide</p>
+					<p>We have taken Ubuntu and pre-configured it to work with the NHS’s most common needs and requirements.</p>
 				</section>
 
 				<section>
-					<p class="fragment fade-in">Libre Office suite</p>
-					<p class="fragment fade-in">NHSmail2 Email</p>
-					<p class="fragment fade-in">Modern browsers Firefox &amp; Chromium/Chrome</p>
-					<p class="fragment fade-in">Windows ‘shared drive’ (eek)</p>
-					<p class="fragment fade-in">Network printers</p>
-					<p class="fragment fade-in">Scanner app / drivers</p>
-					<p class="fragment fade-in">Active Directory Support</p>
+					<h2>What is NHSbuntu?</h2>
+					<br/>
+					<p>NHSbuntu takes <strong>plain Ubuntu</strong> and optimises it for the NHS</p>
+					<p>Canonical have asked us to become an Official Ubuntu 'Flavour'</p>
+					<p><strong>removes</strong> packages the NHS doesn’t need</p>
+					<p><strong>adds</strong> packages the NHS needs, <strong>develops</strong> custom elements</p>
+					<p><strong>adds familiarity</strong> by configuring look &amp; feel, branding etc</p>
+					<p><strong>provides services</strong> around NHSbuntu - customisations, Disaster-recovery Live USB version, custom development.</p>
 				</section>
 
-
-				<section>
-					<h2>20% of NHS desktops are used for direct clinical work</h2>
+				<section class="get-involved">	
+					<h3>getting involved</h3>
+					<p class="fragment fade-in"><strong>download the ISO, install and play!</strong></p>
+					<p class="fragment fade-in">read more here: <a href="https://www.nhsbuntu.org">www.nhsbuntu.org</a></p>
+					<p class="fragment fade-in">join our <a href="https://join-nhsbuntu-slack-team.now.sh/">Slack team</a></p>
+					<p class="fragment fade-in">tell people about NHSbuntu</p>
+					<p class="fragment fade-in">Follow us on Twitter <a href="https://twitter.com.nhsbuntu">@nhsbuntu</a></p>
 				</section>
 
-				<section>
-					<p class="fragment fade-in">PAS (Patient Administration Systems)</p>
-					<p class="fragment fade-in">EPR (Electronic Patient Record)</p>
-					<p class="fragment fade-in">GP Clinical Systems</p>
-					<p class="fragment fade-in">Clinical portals</p>
-					<p class="fragment fade-in">NHS National Services on Spine:</p>
-					<p class="fragment fade-in">Summary Care Record</p>
-					<p class="fragment fade-in">e-Referral Service</p>
-					<p class="fragment fade-in">Patient Demographic Services</p>
-				</section>
-
-				<section>
-					<h3>Often heavily coupled to Windows ecosystem</h3>
-					<h3>More difficult to <strong>Linuxify</strong></h3>
-					<h3>Hard dependencies on:</h3>
-					<h3 class="fragment fade-in">Internet Explorer</h3>
-					<h3 class="fragment fade-in">Microsoft Word</h3>
-					<h3 class="fragment fade-in">Microsoft OneNote even!</h3>
+				<section class="basic-apps-demo-video">
+					<h4>demonstrating NHSmail, browser, office apps for the 80%</h4>
+					<video data-autoplay class="stretch" src="media/daily-use2.mp4"></video>
 				</section>
 
 				<section>
