really final revisions

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 				<section>
 					<h2>YOU HAVE A PROBLEM</h2>
-					<img src="/img/Windows_7_logo.png">
+					<img src="img/Windows_7_logo.png">
 				</section>
 
 				<section class="win7-EOL-there-is-no-plan">
